--- a/src/main/resources/theme/immediate_notification.fxml
+++ b/src/main/resources/theme/immediate_notification.fxml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="notificationRoot" styleClass="immediate-notification"
-      xmlns="http://javafx.com/javafx/8.0.60"
-      fx:controller="com.faforever.client.notification.ImmediateNotificationController">
+<?import javafx.scene.web.WebView?>
+
+<VBox fx:id="notificationRoot" styleClass="immediate-notification" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.notification.ImmediateNotificationController">
   <children>
-    <Label fx:id="titleLabel" styleClass="header" text="&lt;Title&gt;"/>
-    <Separator/>
+    <Label fx:id="titleLabel" styleClass="header" text="&lt;Title&gt;" />
+    <Separator />
     <VBox maxHeight="1.7976931348623157E308" spacing="20.0" styleClass="content" VBox.vgrow="ALWAYS">
       <children>
-        <Label fx:id="messageLabel" text="&lt;message&gt;"/>
+            <WebView fx:id="errorMessageView" contextMenuEnabled="false" minHeight="20.0" minWidth="100.0" prefHeight="200.0" prefWidth="300.0" VBox.vgrow="ALWAYS" />
         <TitledPane fx:id="exceptionPane" maxHeight="1.7976931348623157E308" text="%errorDetails" VBox.vgrow="ALWAYS">
           <content>
-            <TextArea fx:id="exceptionTextArea" maxWidth="1.7976931348623157E308"/>
+            <TextArea fx:id="exceptionTextArea" maxWidth="1.7976931348623157E308" />
           </content>
         </TitledPane>
       </children>
