--- a/src/main/resources/theme/chat_user_item.fxml
+++ b/src/main/resources/theme/chat_user_item.fxml
@@ -11,7 +11,7 @@
   <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-avatar" HBox.hgrow="NEVER" />
   <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"
              styleClass="chat-user-control-country" HBox.hgrow="NEVER"/>
-  <Label fx:id="clanLabel" minWidth="0.0" styleClass="chat-user-control-clan"/>
+  <Label fx:id="clanLabel" minWidth="0.0" styleClass="chat-user-control-clan" onMouseClicked="#onUsernameClicked"/>
   <Label fx:id="usernameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" onMouseClicked="#onUsernameClicked"
          onMouseEntered="#onMouseEnterUsername"
          styleClass="chat-user-control-username" text="&lt;Username&gt;" HBox.hgrow="ALWAYS"/>
