--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -31,7 +31,7 @@
                                 <VBox spacing="5.0">
                                     <children>
                                         <Label styleClass="h3" text="%settings.general.language" />
-                                        <ComboBox fx:id="languageComboBox" disable="true" />
+                                        <ComboBox fx:id="languageComboBox" onAction="#onLanguageSelected"/>
                                         <Label styleClass="h3" text="%settings.general.theme" />
                                         <ComboBox fx:id="themeComboBox" disable="true" />
                                         <CheckBox fx:id="rememberLastTabCheckBox" mnemonicParsing="false" text="%settings.general.rememberLastTab" />
@@ -76,6 +76,8 @@
                                         </VBox>
                                         <Label styleClass="h3" text="%settings.chat.foes" />
                                         <CheckBox fx:id="hideFoeCheckBox" mnemonicParsing="false" text="%settings.chat.hideFoe" />
+                                        <Label text="%settings.chat.timeFormat"/>
+                                        <ComboBox fx:id="timeComboBox" onAction="#onTimeFormatSelected"/>
                                     </children>
                                 </VBox>
                             </children>
